<resources>
    <string name="app_name">Life Oriented List</string>
    <string name="account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Persons Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">navActivity</string>
    <string name="totalStart">You have</string>
    <string name="totalEnd">to complete</string>
    <string name="goals">goals</string>
    <string name="todos">todos</string>
    <string name="pointsTotalEnd">points to redeem for rewards</string>
    <string name="dateCreated">Date Created:</string>
    <string name="dateDue">Date Due: (Optional)</string>
    <string name="never">Never</string>
    <string name="pointsForCompletion">Points for completion:</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="points">Points:</string>
    <string name="lifetime_points">Lifetime Points:</string>
    <string name="current_points">Current Points:</string>
    <string name="name">Name:</string>
    <string name="category_most_points_earned">Most Earned Points Category:</string>
    <string name="category_most_potential">Category with  the Most Earning Potential:</string>
</resources>
